added link to alumni site

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <img class="top-logo img-fluid img-responsive umd-logo" src="https://static.alumniq.com/UMD/production/messaging/lib/2018/6B2B892C-9B31-D02C-A20EB5B9F1F06585.png" alt="University of Maryland Logo">
+      <a href="https://alumni.umd.edu/"><img class="top-logo img-fluid img-responsive umd-logo" src="https://static.alumniq.com/UMD/production/messaging/lib/2018/6B2B892C-9B31-D02C-A20EB5B9F1F06585.png" alt="University of Maryland Logo"></a>
     </div>
   </div>
   <div class="container-fluid is-darkwhite" id = "outer">
