--- a/index.html
+++ b/index.html
@@ -129,8 +129,11 @@
     
 
     <div class="row">
+      <div class="col-md-8 col-md-offset-2" style="padding: 0;">
+        <img class="img-fluid img-responsive" src="img/wall.png" alt="University of Maryland life wall diagram">
+      </div>
       <div class="col-md-8 col-md-offset-2 is-white" id = "inner-wrapper">
-
+      
         <div class="header-wrapper">
           <h1>Frann G. & Eric S. Francis Lifetime Member Wall Search</h1>
           <hr>
