--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
         <div class="header-wrapper">
           <h1>Frann G. & Eric S. Francis Lifetime Member Wall Search</h1>
           <hr>
+          <p>The Frann G. & Eric S. Francis Lifetime Member Wall honors our dedicated Maryland Alumni Association Lifetime Members. The wall is located on the grounds of the Samuel Riggs IV Alumni Center across from the Dessie M. & James R. Moxley Jr. Gardens and near the south gate of Capital One Field at Maryland Stadium.</p>  
+          <p>To identify the location of your name, enter your first and last name in the fields below. Note either first name or last name must be provided. To narrow results further, complete other fields.  </p>
           <p id = "header-content">
             Either first name or last name must be provided. To narrow results further, fill in the other fields. 
           </p>
