--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     .header-content {
       font-size: 18px;
-      padding-bottom: 1.5em;
+      padding-bottom: .62em;
     }
 
     .wall-search-input {
