Update header string

--- a/index.html
+++ b/index.html
@@ -127,21 +127,17 @@
     </div>
   </div>
   <div class="container-fluid is-darkwhite" id = "outer">
-    
-
     <div class="row">
       <div class="col-md-8 col-md-offset-2" style="padding: 0;">
         <img class="img-fluid img-responsive" src="img/wall.png" alt="University of Maryland life wall diagram">
       </div>
       <div class="col-md-8 col-md-offset-2 is-white" id = "inner-wrapper">
-      
+
         <div class="header-wrapper">
           <h1>Frann G. & Eric S. Francis Lifetime Member Wall Search</h1>
           <hr>
-          <p class= "header-content">The Frann G. & Eric S. Francis Lifetime Member Wall honors our dedicated Maryland Alumni Association Lifetime Members. The wall is located on the grounds of the Samuel Riggs IV Alumni Center across from the Dessie M. & James R. Moxley Jr. Gardens and near the south gate of Capital One Field at Maryland Stadium.</p> 
-          <p class= "header-content">To identify the location of your name, enter your first and last name in the fields below. Note either first name or last name must be provided. To narrow results further, complete other fields.</p>
-          <p class= "header-content">Either first name or last name must be provided. To narrow results further, fill in the other fields. 
-          </p>
+          <p class= "header-content">The Frann G. & Eric S. Francis Lifetime Member Wall honors our dedicated Maryland Alumni Association Lifetime Members. The wall is located on the grounds of the Samuel Riggs IV Alumni Center across from the Dessie M. & James R. Moxley Jr. Gardens and near the south gate of Capital One Field at Maryland Stadium.</p>
+          <p class= "header-content">To identify the location of your name, enter your first and last name in the fields below. To narrow results further, complete the "Grad Year" field.</p>
         </div>
 
         <div class="form-wrapper" style="margin-bottom:50px">
